fix menu padding on mobile

--- a/component/header/css/header.css
+++ b/component/header/css/header.css
@@ -391,7 +391,7 @@ header .sticky .navbar-nav > .nav-item:first-child > .nav-link::before {
 }
 
 .header .sticky {
-    background: var(--cua-black-pure);
+    background: rgba(0, 0, 0, 0.9);
     transition: font-size .25s ease-in-out, color .25s ease-in-out, background-color .25s ease-in-out, border-color .25s ease-in-out;
 }
 
@@ -473,7 +473,8 @@ img.sticky-show {
 @media only screen and (max-width: 991px) {
     #navbar-main {
         background-color: transparent;
-        border-top: 1px solid var(--cua-gray-200)
+        border-top: 1px solid var(--cua-gray-200);
+        padding: 0 !important;
     }
 
     .navbar-nav > li:not(:last-child) {
@@ -595,7 +596,7 @@ img.sticky-show {
     }
 
     header .border-bottom {
-        border-bottom: 1px solid var(--cua-white)!important;
+        border-bottom: 1px solid var(--cua-white) !important;
         /* display: none; */
     }
 
